# server/components/products/config/s5-openapi.yaml
@@ -29,30 +29,57 @@ paths:
         "401":
           description: Unauthorized
     post:
-      summary: Create a new product
+      tags:
+        - products
+      summary: "Create a new product (author: @Alona)"
+      description: As an admin, I would like to add a new product, so that I could manage a product catalogue.
       requestBody:
         required: true
         content:
           application/json:
             schema:
               type: object
+              required:
+                - category_id
+                - name
+                - short_description
               properties:
                 name:
                   type: string
+                  minLength: 3
+                  maxLength: 100
+                  example: Wireless RGB Keyboard
                 category_id:
-                  type: string
+                  type: integer
+                  example: 54
                 category_name:
                   type: string
+                  minLength: 3
+                  maxLength: 100
+                  nullable: true
+                  example: Keyboards
                 short_description:
                   type: string
+                  minLength: 20
+                  maxLength: 1000
+                  example: Experience seamless typing with this wireless RGB keyboard, featuring customizable backlighting, ergonomic design, and reliable connectivity for a smooth and vibrant typing experience.
                 detailed_description:
                   type: string
+                  maxLength: 10000
+                  nullable: true
+                  example: Upgrade your typing experience with this wireless RGB keyboard, combining style and functionality. With customizable RGB lighting, an ergonomic design, and quiet, responsive keys, it ensures a smooth typing experience whether you're working or gaming. Benefit from stable wireless connectivity, extended battery life, and a sleek, vibrant design that enhances any workspace.
                 product_photos:
                   type: array
+                  nullable: true
                   items:
                     type: string
+                    format: uri
+                    example: https://www.youtube.com/photo.jpg
                 product_url:
                   type: string
+                  nullable: true
+                  format: uri
+                  example: https://youtu.be/0LE0trd740Q
       responses:
         "200":
           description: Success
@@ -83,14 +110,38 @@ paths:
                     type: string
         "400":
           description: Please fill in all the required fields
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: "error"
+                  message:
+                    type: string
         "401":
           description: Unauthorized
-        "500":
-          description: Unable to save product
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: "error"
+                  message:
+                    type: string
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorObject"
 
   /products/{product_id}/tags:
     post:
-      summary: "Add tags to a product (author: @Marika)"
+      summary: "Add tags to a product (author: @Marika) (tester: @Alona)"
       description: As admin, I would like to mark products as favorites, best sellers, or newly-arrived, so that I can highlight specific products based on seller requests.
       parameters:
         - in: path
@@ -128,7 +179,7 @@ paths:
 
   /products/{product_id}/price:
     post:
-      summary: "Update product price (author: @Marika)"
+      summary: "Update product price (author: @Marika) (tester: @Alona)"
       description: As admin, I would like to associate the price of an item to a date in which it was set, so that I can track the history of the product price.
       parameters:
         - in: path
@@ -309,7 +360,10 @@ paths:
 
   /products/{product_id}/photos:
     post:
-      summary: Add photos to a product
+      tags:
+        - products
+      summary: "Add photos to a product (author: @Alona)"
+      description: As an admin, I would like to optionally add a gallery of up to 5 photos, which are up to 1 MB each, to a product for quick visual recognition.
       parameters:
         - in: path
           name: product_id
@@ -341,8 +395,16 @@ paths:
                     type: string
         "401":
           description: Unauthorized
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorObject"
     get:
-      summary: Get photos of a product
+      tags:
+        - products
+      summary: "Get photos of a product (author: @Alona)"
       parameters:
         - in: path
           name: product_id
@@ -365,9 +427,16 @@ paths:
           description: Unauthorized
         "404":
           description: Not found
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorObject"
+
   /tags:
     get:
-      summary: "Retrieve tags for a specific product (author: @Marika)"
+      summary: "Retrieve tags for a specific product (author: @Marika) (tester: @Alona)"
       description: As admin, I would like to mark products as favorites, best sellers, or newly-arrived, so that I can highlight specific products based on seller requests.
       parameters:
         - name: product_id
@@ -435,3 +504,23 @@ paths:
 
         "401":
           description: Unauthorized
+components:
+  schemas:
+    ErrorObject:
+      type: object
+      properties:
+        status:
+          type: string
+          description: "error"
+        errors:
+          type: array
+          items:
+            type: string
+          description: "Error messages"
+          example: ["invalid", "not available"]
+        locations:
+          type: array
+          items:
+            type: string
+          description: "Optional: Additional information about the location of each message"
+          example: ["db.js", "service.js"]
