# server/components/products/db/products.db.js
@@ -12,7 +12,11 @@ module.exports.getProductsDb = async (options) => {
   };
 };
 
-module.exports.postProductsDb = async (options) => {
+module.exports.postProductsDb = async (
+  name,
+  category_id,
+  short_description
+) => {
   /** Imagine that in this funciton, you will perform the database query and get its output in result: result = await pool.query();
   1- Modify options to be specific parameters or one of your objects: think about what you need to recieve from services to do the query successfully
   2- Thinks about the entities you need to access here. Are they created? are they well defined? Can you make sure entities in init.sql are updated. 
